--- a/CatchMeIfYouCan/app/src/main/res/layout/activity_game.xml
+++ b/CatchMeIfYouCan/app/src/main/res/layout/activity_game.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameActivity">
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:srcCompat="@drawable/Abagnale" />
+        app:srcCompat="@drawable/my_character" />
 
     <TextView
         android:id="@+id/textView2"
