--- a/ArtBook/app/src/main/res/layout/activity_art.xml
+++ b/ArtBook/app/src/main/res/layout/activity_art.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="37dp"
         android:layout_marginBottom="70dp"
+        android:onClick="selectImage"
         app:layout_constraintBottom_toTopOf="@+id/nameText"
         app:layout_constraintStart_toStartOf="@+id/nameText"
         tools:srcCompat="@tools:sample/avatars" />
