--- a/ArtBook/app/src/main/res/layout/activity_art.xml
+++ b/ArtBook/app/src/main/res/layout/activity_art.xml
@@ -30,17 +30,6 @@
         app:layout_constraintStart_toStartOf="@+id/nameText"
         app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="37dp"
-        android:layout_marginBottom="70dp"
-        android:onClick="selectImage"
-        app:layout_constraintBottom_toTopOf="@+id/nameText"
-        app:layout_constraintStart_toStartOf="@+id/nameText"
-        tools:srcCompat="@tools:sample/avatars" />
-
     <EditText
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
@@ -66,4 +55,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameText" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="selectImage"
+        app:layout_constraintBottom_toTopOf="@+id/nameText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/images" />
 </androidx.constraintlayout.widget.ConstraintLayout>
